@@ -1219,6 +1219,14 @@
             "kareng"
          ]
       },
+      "Kalyan Kondapally" : {
+         "emails" : [
+            "kalyan.kondapally@intel.com"
+         ],
+         "nicks" : [
+            "kalyank"
+         ]
+      },
       "Kaustubh Atrawalkar" : {
          "emails" : [
             "kaustubh@motorola.com"
