@@ -1,3 +1,9 @@
+2013-05-29  Kalyan Kondapally  <kalyan.kondapally@intel.com>
+
+        Unreviewed: Adding myself to committers list.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2013-05-28  Arpita Bahuguna  <a.bah@samsung.com>
 
         Unreviewed: Adding myself to committers list.
